{
    "name": "InputSystem",
    "maps": [
        {
            "name": "PlayerInputs",
            "id": "4db23b2e-b1d4-4943-beb9-4656ab681bb5",
            "actions": [
                {
                    "name": "Click",
                    "type": "Button",
                    "id": "50a8c657-fc57-42bc-9be1-fb2e39e014b9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ClickToDrag",
                    "type": "Button",
                    "id": "70ebcf0a-6c3a-4367-b264-3b1335e340f4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold",
                    "initialStateCheck": false
                },
                {
                    "name": "ClickPos",
                    "type": "Value",
                    "id": "d907f066-68bd-4480-8fcd-c05269e52c85",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "5b4be966-4225-4410-b663-9261a6d01856",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Click",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e33a33de-8ea7-43e3-ace2-908b410c7361",
                    "path": "<Touchscreen>/Press",
                    "interactions": "Tap",
                    "processors": "",
                    "groups": "",
                    "action": "Click",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1f51f591-26c4-4e31-b74d-97b58c71132d",
                    "path": "<Mouse>/middleButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ClickToDrag",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "df037f1a-5221-4363-8a79-d12dd7272a7f",
                    "path": "<Touchscreen>/Press",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": "",
                    "action": "ClickToDrag",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7a6a4ba5-2d14-4470-9ead-9f84ecb078c8",
                    "path": "<Touchscreen>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ClickPos",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c27c1952-40fd-42e1-ad8e-7d5cd8299081",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ClickPos",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}